<resources>
    <string name="app_name">Tuko News</string>
    <string name="logoName">TUKO NEWS</string>
    <string name="no_internet">No Network Connection..</string>
    <string name="network_error">Network Error</string>
    <string name="database_name">tuko_news_db.db</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">TUKO NEWS</string>
    <string name="titletext">ex-Safaricom employee KSh 14.6m for unfair sacking</string>
    <string name="poor_network_view_hint">No Network Connectivity</string>
    <string name="loading_text">LOADING DATA...</string>
    <string name="tap_to_reload">Click to Reload</string>
    <string name="error_msg_unknown">Unknown Error Loading....</string>
    <string name="loading_more_text">LOADING MORE DATA</string>
    <string name="no_liked_items">NO BOOKMARKED NEWS</string>
    <string name="clearCache">Clear Data</string>
    <string name="settings">Settings</string>
    <string name="about">About Tuko News</string>
    <string name="external_libs">Libraries Used</string>
    <string name="brief_about_app">Tuko News is an Android client consuming the official Tuko News Api, with more features included and even more on the roadmap. This app is Open Source and just for learning purposes.</string>
    <string name="about_app">About Tuko News</string>
    <string name="version">v1.0</string>
    <string name="manageCategories">Manage Categories</string>
    <string name="notification">Notifications</string>
</resources>
